unpackaged/main/default/objects/Case/fields/Application_Email_checked__c.field-meta.xml
<CustomField>
    <fullName>Application_Email_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this box is ticked when it was checked that this Application Email was attached to the correct Account. Used for a monitoring Report regarding unassigned or false assigned Cases. See Report &quot;Application Emails unassigned&quot;</description>
    <label>Application Email checked</label>
    <type>Checkbox</type>
</CustomField>