unpackaged/main/default/objects/Case/fields/Application_Email_Closing_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Application_Email_Closing_Trigger__c</fullName>
    <description>helper field used in the Process Builder to build a timer that is less than 1h in order to not spam the inbox of the CSMs</description>
    <label>Application Email Closing Trigger</label>
    <type>DateTime</type>
</CustomField>