unpackaged/main/default/objects/Case/fields/Assigned_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Finance__c</fullName>
    <label>Assigned to Finance</label>
    <type>DateTime</type>
</CustomField>