unpackaged/main/default/objects/Case/fields/Assigned_to_PI_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_PI_Manager__c</fullName>
    <label>Assigned to PI Manager</label>
    <type>DateTime</type>
</CustomField>