unpackaged/main/default/objects/Case/fields/Assigned_to_product_integration__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_product_integration__c</fullName>
    <label>Assigned to product integration</label>
    <type>DateTime</type>
</CustomField>