unpackaged/main/default/objects/Case/fields/Audit_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Audit_cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit cancellation</label>
    <type>Checkbox</type>
</CustomField>