unpackaged/main/default/objects/Case/fields/case_info__c.field-meta.xml
<CustomField>
    <fullName>case_info__c</fullName>
    <formula>IF(  CaseNumber  != &quot;&quot;, &quot;Case Number: &quot; +    CaseNumber  + BR(), &quot;&quot;) +  
IF( SuppliedEmail != &quot;&quot;, &quot;Email: &quot; +   SuppliedEmail + BR(), &quot;&quot;) + 
 IF( Account.customer_number__c !=&quot;&quot;, &quot;Customer Number: &quot; + Account.customer_number__c + BR(), &quot;&quot;) +  
IF(  IsStopped  = TRUE, &quot;Stopped Until: &quot; +    TEXT(stopped_until__c) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Info</label>
    <type>Text</type>
</CustomField>