unpackaged/main/default/objects/Case/fields/Case_Source_by_Mail__c.field-meta.xml
<CustomField>
    <fullName>Case_Source_by_Mail__c</fullName>
    <formula>IF(OR(CONTAINS(SuppliedEmail,&quot;zertifizierung@trustedshops&quot;),CONTAINS(SuppliedEmail,&quot;audit@trustedshops&quot;)),&quot;Zertifizierung/Audit&quot;,
IF(CONTAINS(SuppliedEmail,&quot;service@trustedshops&quot;),&quot;Service&quot;,
IF(CONTAINS(SuppliedEmail,&quot;reviewservice@trustedshops&quot;),&quot;Reviewservice&quot;,
IF(CONTAINS(SuppliedEmail,&quot;folgepruefung@trustedshops&quot;),&quot;Folgepruefung&quot;,
IF(CONTAINS(SuppliedEmail,&quot;shop@trustedshops&quot;),&quot;Shop&quot;,
IF(CONTAINS(SuppliedEmail,&quot;riskservices@trustedshops&quot;),&quot;Riskservices&quot;,
IF(OR(CONTAINS(SuppliedEmail,&quot;compliance@trustedshops&quot;),CONTAINS(SuppliedEmail,&quot;compliance.internal@trustedshops&quot;)),&quot;Compliance&quot;,
IF(CONTAINS(SuppliedEmail,&quot;infringement@trustedshops&quot;),&quot;Infringement&quot;,
IF(CONTAINS(SuppliedEmail,&quot;members@trustedshops&quot;),&quot;Members&quot;,
IF(CONTAINS(SuppliedEmail,&quot;members@e.trustedshops&quot;),&quot;E.Members&quot;,
IF(CONTAINS(SuppliedEmail,&quot;trustassurance@trustedshops&quot;),&quot;Trustassurance&quot;,
IF(ISBLANK(SuppliedEmail),&quot;No Email&quot;,
IF(NOT(CONTAINS(SuppliedEmail,&quot;@trustedshops&quot;)),&quot;Customer&quot;,
IF(CONTAINS(SuppliedEmail,&quot;@trustedshops&quot;),&quot;Other TS Email&quot;,
&quot;&quot;))))))))))))))</formula>
    <label>Case Source by Mail</label>
    <type>Text</type>
</CustomField>