unpackaged/main/default/objects/Case/fields/Casesafe_Id__c.field-meta.xml
<CustomField>
    <fullName>Casesafe_Id__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casesafe Id</label>
    <type>Text</type>
</CustomField>