unpackaged/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Close_Status__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd party</fullName>
            </value>
            <value>
                <fullName>Add to spam</fullName>
            </value>
            <value>
                <fullName>Alerting</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>B2B Marketing</fullName>
            </value>
            <value>
                <fullName>B2C Marketing</fullName>
            </value>
            <value>
                <fullName>B2C-Service</fullName>
            </value>
            <value>
                <fullName>Beyond eCommerce</fullName>
            </value>
            <value>
                <fullName>Business Check</fullName>
            </value>
            <value>
                <fullName>Buyer Protection</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Consumer Team</fullName>
            </value>
            <value>
                <fullName>Contract/Membership</fullName>
            </value>
            <value>
                <fullName>Contract Team</fullName>
            </value>
            <value>
                <fullName>Customer Objectives</fullName>
            </value>
            <value>
                <fullName>Data Quality / Management</fullName>
            </value>
            <value>
                <fullName>eTrusted</fullName>
            </value>
            <value>
                <fullName>eTrusted Feedback</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Guarantee</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Leading Status</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Lift</fullName>
            </value>
            <value>
                <fullName>Local Reviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>