unpackaged/main/default/objects/Case/fields/close_connected_case_automatically__c.field-meta.xml
<CustomField>
    <fullName>close_connected_case_automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you check this checkbox the chosen connected case will be set to &quot;Closed&quot; automatically in the background.</inlineHelpText>
    <label>Close Connected Case automatically</label>
    <type>Checkbox</type>
</CustomField>