unpackaged/main/default/objects/Case/fields/Connected_Case__c.field-meta.xml
<CustomField>
    <fullName>Connected_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Connected Cases</relationshipLabel>
    <relationshipName>ConnectedCases</relationshipName>
    <type>Lookup</type>
</CustomField>