unpackaged/main/default/objects/Case/fields/connected_case_subject__c.field-meta.xml
<CustomField>
    <fullName>connected_case_subject__c</fullName>
    <formula>Connected_Case__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Case Subject</label>
    <type>Text</type>
</CustomField>