unpackaged/main/default/objects/Case/fields/contact_language__c.field-meta.xml
<CustomField>
    <fullName>contact_language__c</fullName>
    <formula>TEXT( Contact.language__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Language</label>
    <type>Text</type>
</CustomField>