unpackaged/main/default/objects/Case/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <formula>IF(CreatedBy.LastName==&quot;System&quot;,&quot;System&quot;,
IF(AND( CreatedBy.FirstName==&quot;API&quot;,CreatedBy.LastName==&quot;User&quot;),&quot;API User&quot;,
IF(ISBLANK(CreatedBy.UserRole.Name),&quot;No Role&quot;,
CreatedBy.UserRole.Name)))</formula>
    <label>Created by Role</label>
    <type>Text</type>
</CustomField>